# theta-data

./: .gitignore  README.md  pyproject.toml
options/: __init__.py  list.py
thetadata/: __init__.py  base.py  client.py
thetadata/options/: __init__.py  history.py  list.py
